[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "NLUtils"
version = "0.0.1"
authors = [
  { name="Lakur Fessi", email="lakurfessi@outlook.com" },
]
description = "A simple utils for NL ecosystem"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [] 

[tool.setuptools.packages.find]
where = ["src"]